--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-dompdf": "^2.1",
         "datatables.net/datatables.net-scroller-dt": "^2.4",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.11",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
